[B]Version 1.0.20[/B]
-Added setting for rtmp/rtmpe stream timeout parameter
-Completed support for streams from http://sawlive.tv


[B]Version 1.0.19[/B]
-Added support for playing media from 4shared.com
-Added support for rtmpe streams
-Added support for streams from http://sawlive.tv


[B]Version 1.0.18[/B]
-removing mac generated files from zip


[B]Version 1.0.16[/B]
- Removing references to mechanize as it seems to require separate install

[B]Version 1.0.16[/B]
- Bug fix


[B]Version 1.0.14[/B]
- Stream section now respects playlist setting (on or off)
- unicode support
- increased timeout during rss reads

[B]Version 1.0.13[/B]
- Fixing bug while playing justin.tv 

[B]Version 1.0.12[/B]
- Added ability to play justin.tv channels

[B]Version 1.0.11[/B]
- Added ability for live streams to be changed via next/previous controls


[B]Version 1.0.10[/B]
- MOving live channels into categories (by language)


[B]Version 1.0.9[/B]
- Added support for http:// live streams from desistreams.xml (fixes Apna, Qtv)


[B]Version 1.0.8[/B]

- Added urdu channels from roshantv.com to both the desistreams repository and pakee plugin:
ARY Digital, Express Entertainment, Geo Entertainment, Hum Tv,Kashmir TV, nVibeTv, Sohni Dharti, PTV Sports, 8x music
- Fixed streams from http://bglive-a.bitgravity.com



[B]Version 1.0.7[/B]
- Added other desi streams under "Live TV Channels" category from desistreams.googlecode.com (courtesy of angelworld...Thanks!)
- Fixed Geo News stream (now streamed from their Youtube channel)


[B]Version 1.0.6[/B]
- Added cricket streams under "Live TV Channels" category
- Added support for rtsp streams
- Fixed Dunya news live stream

[B]Version 1.0.5[/B]
- Added support for browsing espncricinfo.com
- Fixed issue where feeds with alternate pubDate format were failing
- Fixed hardcoded prompt messsages


[B]Version 1.0.4[/B]
- Added live channel streams (courtesy of yacir...Thanks!)
- Set default sorting to be by title for drama episodes
