@@ -1,3 +1,7 @@
+[B]Version 1.0.21[/B]
+-Added support for dailymotion, nova, sastatv video
+
+
 [B]Version 1.0.20[/B]
 -Added setting for rtmp/rtmpe stream timeout parameter
 -Completed support for streams from http://sawlive.tv
